# afs

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh.md  justfile
src/: lib.rs
tests/: delete_test.rs  exists_test.rs  lib_test.rs  modify_test.rs  read_test.rs  write_test.rs
