[package]
name = "afs"
version = "0.1.2"
edition = "2024"
authors = ["michaelbguo@tencent.com"]
license = "MIT"
repository = "https://github.com/guobin211/afs"
documentation = "https://docs.rs/afs"
keywords = ["fs", "path", "afs", "async-fs"]
categories = ["asynchronous", "filesystem"]
description = "The first choice of fs library, inspired by node:fs"
readme = "README.md"

[dependencies]
anyhow = "^1.0.93"
tokio = { version = "^1", features = ["io-util", "fs"] }
fs_extra = "^1.3.0"
fs-err = "^3.1.0"
serde_json = "^1.0.133"
serde = { version = "^1", features = ["derive"] }
tempfile = "^3.19.1"
sys-info = "^0.9.1"
sha2 = "^0.10"

[dev-dependencies]
tokio = { version = "^1", features = ["full"] }
