[package]
name = "afs"
version = "0.2.0"
edition = "2024"
authors = ["michaelbguo@tencent.com"]
license = "MIT"
repository = "https://github.com/guobin211/afs"
documentation = "https://docs.rs/afs"
keywords = ["fs", "path", "afs", "async-fs"]
categories = ["asynchronous", "filesystem"]
description = "The first choice of fs library, inspired by node:fs"
readme = "README.md"

[dependencies]
thiserror = "^2"
tokio = { version = "^1", features = ["io-util", "fs"] }
fs_extra = "^1.3"
fs-err = "^3.1"
serde_json = "^1"
serde = { version = "^1", features = ["derive"] }
tempfile = "^3"
sys-info = "^0.9"
sha2 = "^0.10"

[dev-dependencies]
tokio = { version = "^1", features = ["full"] }
